# iris-podcast-maker

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  run
scripts/: transcript.py
src/: already_processed  do.py  local_video_specs.json
